@@ -5,7 +5,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class SortByJumlahAsdosDibutuhkan implements LowonganSortStrategy {
@@ -13,6 +12,6 @@ public class SortByJumlahAsdosDibutuhkan implements LowonganSortStrategy {
     public List<Lowongan> sort(List<Lowongan> lowonganList) {
         return lowonganList.stream()
                 .sorted(Comparator.comparingInt(Lowongan::getJumlahAsdosDibutuhkan))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
